# flask-mcp-lens

./: .gitignore  README.ja.md  README.md  pyproject.toml
docs/: design-phase1.md  design-phase2.md  design-phase3.md  design-phase4.md  requirements.md
src/flask_mcp_lens/: __main__.py  cache.py  config.py  index.py  models.py  server.py  urlmap.py
src/flask_mcp_lens/analyzer/: ast_visitor.py  imports.py  resolver.py  scanner.py
src/flask_mcp_lens/auth/: __init__.py  detector.py  whitelist.py
src/flask_mcp_lens/extensions/: __init__.py  detector.py
src/flask_mcp_lens/extensions/handlers/: __init__.py  base.py  flask_jwt_extended.py  flask_login.py
src/flask_mcp_lens/tools/: __init__.py  find_app_factory.py  find_potentially_unprotected_routes.py  get_app_overview.py  get_extension_config.py  get_route_handler.py  list_api_endpoints.py  list_auth_strategies.py  list_blueprints.py  list_extensions.py  list_routes.py  refresh_index.py
tests/: conftest.py
tests/eval/: test_auth_precision.py  truth_full_app.yaml
tests/fixtures/factory_nested_bp/app/: __init__.py
tests/fixtures/factory_nested_bp/expected/: get_app_overview.json  list_routes.json
tests/fixtures/factory_one_bp/app/: __init__.py  views.py
tests/fixtures/full_app/: .flask-mcp-lens.toml
tests/fixtures/single_app/: app.py
tests/integration/: test_e2e_mcp.py  test_tools_smoke.py
tests/perf/: test_smoke.py
tests/unit/: test_ast_visitor.py  test_ast_visitor_methodview.py  test_auth_detector.py  test_cache.py  test_config.py  test_extensions_detector.py  test_resolver.py  test_urlmap.py
(+14 files in other folders)
