[project]
name = "flask-mcp-lens"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest", "jsonschema"]

[project.scripts]
flask-mcp-lens = "flask_mcp_lens.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_mcp_lens"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
